[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BANKO Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/gilmry/BANKO"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
