[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BANKO Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/gilmry/BANKO"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
rust_decimal = { version = "1.41", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.9"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
