[package]
name = "banko-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
banko-domain = { path = "../domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
rand = "0.8"
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
