[package]
name = "banko-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1.41"
num-traits = "0.2"
