[package]
name = "banko-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
banko-domain = { path = "../domain" }
banko-application = { path = "../application" }
actix-web.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
