[package]
name = "banko-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
banko-domain = { path = "../domain" }
banko-application = { path = "../application" }
actix-web.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
bcrypt = "0.17"
jsonwebtoken = "9"
totp-lite = "2"
base32 = "0.5"
rand = "0.8"
rust_decimal = "1"
actix-web-prom = "0.10"
prometheus = "0.14"

[dev-dependencies]
cucumber = "0.21"
tokio = { workspace = true }
futures = "0.3"
actix-rt = "2"

[[test]]
name = "bdd"
harness = false
